--- a/flip/Gemfile
+++ b/flip/Gemfile
@@ -3,5 +3,6 @@ source 'https://rubygems.org'
 gemspec
 
 group :development, :test do
+  gem 'addressable', '~> 2.8'
   gem 'rake', '~> 12.0.0'
 end
